# agent-gallery

./: .gitignore  README.md
code-actor/: README.md  pyproject.toml
code-actor/src/: main.py
hacker-news-analyst/: README.md  pyproject.toml
hacker-news-analyst/src/: main.py
hacker-news-analyzer/: README.md
hacker-news-analyzer/src/: hackernews.py  llm.py  main.py
news-generator/: README.md  hello.py  main.py  pyproject.toml
resume-optimizer/: README.md  pyproject.toml
resume-optimizer/src/: main.py  model.py
tool-search-tool-quickstart/: README.md  pyproject.toml
tool-search-tool-quickstart/src/: formatter.py  github_mcp.py  main.py
twitter-generator/: README.md  main.py  pyproject.toml
twitter-generator/static/: twitter-prompt.txt
