[project]
name = "twitter-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "firecrawl-py>=4.11.3",
    "langchain~=1.0",
    "langchain-community~=0.4",
    "langchain-openai>=1.1.5",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-sqlite>=3.0.1",
    "python-dotenv>=1.2.1",
]
